# xin26x

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/common/: CMakeLists.txt
app/common/include/: xin_config_file.h  xin_encoder_option.h
app/common/source/: xin_config_file.c  xin_encoder_option.c
app/encoder/: CMakeLists.txt
app/encoder/source/: xin_app_enc.c
common/include/: basic_macro.h  h26x_definition.h  video_macro.h  xin_avx2_linux_patch.h  xin_video_common.h
doc/: perf-comp.xlsx  xin265vsx265.xlsx  xin266vsx265.xlsx
docs/: vvc-deployment-challenges.md
h265_core/: h265_core.lib
h265p_core/: CMakeLists.txt  h265p_core.lib
h265p_core/include/: h265p_intra_pred_filter.h  h265p_inverse_1d_trans.h  h265p_inverse_trans.h  h265p_loop_filter.h  h265p_trans_context.h  h265p_trans_utility.h
h265p_core/source/: h265p_intra_pred_filter.c  h265p_inverse_1d_trans.c  h265p_inverse_trans.c  h265p_loop_filter.c  h265p_trans_context.c
h265p_core/source/x86/: h265p_intra_pred_filter_avx2.c  h265p_intra_pred_filter_sse4.c  h265p_inverse_1d_trans_avx2.c  h265p_inverse_1d_trans_sse4.c  h265p_inverse_trans_avx2.c  h265p_inverse_trans_sse4.c  h265p_trans_utility_avx2.c  h265p_trans_utility_sse2.c
h265p_encoder/: CMakeLists.txt  h265p_enc.lib
h265p_encoder/include/: h265p_analyze_mb.h  h265p_bit_stream.h  h265p_bit_stream_struct.h  h265p_cabac_context.h  h265p_cabac_struct.h  h265p_cfg_api.h  h265p_common_data.h  h265p_compute_dist.h  h265p_constant.h  h265p_definition.h  h265p_enc_init.h  h265p_encode_sb.h  h265p_encoder_create.h  h265p_entropy_manipulate.h  h265p_entropy_write.h  h265p_forward_1d_trans.h  h265p_forward_trans.h  h265p_func_struct.h  h265p_idct_add.h  h265p_intra_prediction.h  h265p_macro_block_struct.h  h265p_md_buf_manipulate.h  h265p_md_buffer_struct.h  h265p_me_struct.h  h265p_pic_struct.h  h265p_picture_struct.h  h265p_quant_inv_quant.h  h265p_scan_order.h  h265p_section_struct.h  h265p_seq_struct.h  h265p_sub_dct.h  h265p_super_block_struct.h  h265p_trans_recon.h  h265p_trans_unit_struct.h  h265p_tx_init_level.h  h265p_write_header.h
h265p_encoder/source/: h265p_analyze_intra_mb.c  h265p_analyze_mb.c  h265p_bit_stream.c  h265p_cabac_context.c  h265p_common_data.c  h265p_compute_bs.c  h265p_compute_dist.c  h265p_create_section.c  h265p_deblock_sb.c  h265p_enc_init.c  h265p_encode_sb.c  h265p_encode_section.c  h265p_encoder_api.c  h265p_encoder_create.c  h265p_entropy_estimate.c  h265p_entropy_write.c  h265p_forward_1d_trans.c  h265p_forward_trans.c  h265p_func_init.c  h265p_idct_add.c  h265p_intra_prediction.c  h265p_itrans_recon.c  h265p_lp_cdef_rest_section.c  h265p_md_buf_manipulate.c  h265p_pu_availablity.c  h265p_quant_inv_quant.c  h265p_read_input_sb.c  h265p_scan_order.c  h265p_sub_dct.c  h265p_trans_quant.c  h265p_write_header.c
h265p_encoder/source/x86/: h265p_compute_dist_avx2.c  h265p_forward_1d_trans_avx2.c  h265p_forward_1d_trans_sse2.c  h265p_forward_trans_avx2.c  h265p_forward_trans_sse2.c  h265p_quant_inv_quant_avx2.c  h265p_quant_inv_quant_sse4.c  h265p_tx_init_level_sse4.c
h266_core/: CMakeLists.txt  h266_core.lib
h266_core/include/: h266_alf.h  h266_alf_context.h  h266_common_data.h  h266_constant.h  h266_inter_pred_context.h  h266_intra_pred_context.h  h266_intra_pred_filter.h  h266_inverse_1d_trans.h  h266_inverse_trans.h  h266_loop_filter.h  h266_motion_comp.h
h266_core/source/: h266_alf.c  h266_bilinear_filter.c  h266_chroma_mc.c  h266_common_data.c  h266_intra_pred_filter.c  h266_loop_filter.c  h266_luma_mc.c
h266_core/source/x86/: h266_alf_avx2.c  h266_apply_pdpc_avx2.c  h266_apply_pdpc_ssse3.c  h266_bili_filter_avx2.c  h266_bili_filter_sse4.c  h266_chroma_mc_ssse3.c  h266_idct2_2d_avx2.c  h266_intra_pred_ang_avx2.c  h266_intra_pred_ang_sse4.c  h266_intra_pred_ang_ssse3.c  h266_intra_pred_dc_ssse3.c  h266_intra_pred_hor_avx2.c  h266_intra_pred_hor_ssse3.c  h266_intra_pred_planar_avx2.c  h266_intra_pred_planar_ssse3.c  h266_intra_pred_ver_avx2.c  h266_intra_pred_ver_sse4.c  h266_iskip_2d_avx2.c  h266_loop_filter_sse4.c  h266_luma_mc_avx2.c  h266_luma_mc_ssse3.c
h266_encoder/source/: h266_alf_rdo.c  h266_analyze_cu.c  h266_analyze_inter_cu.c  h266_analyze_intra_cu.c  h266_analyze_skip_merge_cu.c  h266_bit_stream.c  h266_cabac_context.c  h266_compute_bs.c  h266_compute_dist.c  h266_construct_weight_input.c  h266_copy_and_pad.c  h266_create_section.c  h266_deblock_ctu.c  h266_deblock_sao_section.c  h266_dep_quant.c  h266_enc_init.c  h266_encode_ctu.c  h266_encode_section.c  h266_encoder_api.c  h266_encoder_create.c  h266_entropy_estimate.c  h266_entropy_write.c  h266_forward_trans.c  h266_func_init.c  h266_get_neighbour_mv.c  h266_idct_add.c  h266_inter_prediction.c  h266_intra_prediction.c  h266_inverse_trans.c  h266_itrans_recon.c  h266_lmcs.c  h266_lookahead_frame.c  h266_mctf.c  h266_md_buf_manipulate.c  h266_pu_availablity.c  h266_quant_inv_quant.c  h266_rate_control.c  h266_rate_dist_opt_quant.c  h266_read_input_ctu.c  h266_reorder_coeff.c  (+10 more)
h266_encoder/source/x86/: h266_alf_rdo_avx2.c  h266_coeff_scan_sse4.c  h266_compute_dist_avx2.c  h266_compute_dist_sse2.c  h266_compute_gradient_avx2.c  h266_construct_bi_me_input_sse4.c  h266_construct_weight_Input_avx2.c  h266_copy_and_pad_avx2.c  h266_copy_and_pad_sse4.c  h266_dep_quant_avx2.c  h266_quant_inv_quant_avx2.c  h266_quant_inv_quant_sse4.c
h26x_api/: CMakeLists.txt  h26x_api.lib
h26x_api/include/: h265_encoder_api.h  h265p_encoder_api.h  h266_encoder_api.h  h26x_encoder_struct.h
h26x_api/source/: h26x_encoder_api.c
h26x_core/: h26x_core.lib
h26x_core/include/: h26x_block_transpose.h  h26x_block_utility.h  h26x_calc_log.h  h26x_calc_psnr_ssim.h  h26x_common_data.h  h26x_compute_dist.h  h26x_cpu_detection.h  h26x_inverse_1d_trans.h  h26x_picture_struct.h  h26x_thread_pool.h  h26x_thread_struct.h  h26x_trans_context.h
lib/: xin26x.exp  xin26x.lib
testbin/: fast.cfg
video_api/video_common/include/: xin_typedef.h
video_api/video_encoder/: xin26x_encoder.def
video_api/video_encoder/include/: xin26x_encoder_api.h  xin26x_logger.h  (+1 more)
